--- a/abstract.tex
+++ b/abstract.tex
@@ -1,3 +1,4 @@
 \begin{abstract}
-    To determine the analytical expansion, we first find formulas for a higher derivative of the alternative representation of this function, then we apply the Taylor series.
+      To determine the analytical expansion, we first find formulas for a higher 
+      derivative of the alternative representation of this function, then we apply the Taylor series.
 \end{abstract}
